<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    android:background="@drawable/background"
    tools:context=".AddEventActivity">

    <EditText
        android:id="@+id/eventNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="44dp"
        android:hint="@string/event_name"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textColorHint="@color/hint"
        android:textColorLink="@color/bg_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eventDateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:hint="@string/event_date"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textColorHint="@color/hint"
        android:textColorLink="@color/gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventNameEditText" />

    <EditText
        android:id="@+id/eventDescriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:hint="@string/event_description"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textColorHint="@color/hint"
        android:textColorLink="@color/gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDateEditText" />

    <Button
        android:id="@+id/saveEventButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/button"
        android:text="@string/save_event"
        android:textAlignment="center"
        android:textSize="20sp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDescriptionEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>